# beebotos

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DAO-OK.md  INSTALL.md  LICENSE  Makefile  ROADMAP.md  VERSIONING.md  beebotos.md  build-env.bat  build_release.bat  cargo-config.toml  cliff.toml  clippy.toml  codecov.yml  deny.toml  docker-compose.test.yml  fix_compilation.sh  foundry.toml  justfile  lefthook.yml  readme.md  renovate.json  rust-toolchain.toml  rustfmt.toml  setup_kimi_env.sh  setup_wecom_env.sh  start-gateway.ps1  (+3 more)
apps/beehub/: Cargo.toml
apps/beehub/migrations/: 001_init.sql
apps/beehub/src/: handlers.rs  main.rs  models.rs  readme.md  storage.rs
apps/cli/: Cargo.toml  readme.md
apps/cli/src/: client.rs  client_temp.rs  completion.rs  config.rs  error.rs  logging.rs  main.rs  network.rs  output.rs  progress.rs  readme.md  secure_storage.rs  todo-list1.md  todo-list2.md  websocket.rs
apps/cli/src/commands/: agent.rs  brain.rs  browser.rs  chain.rs  channel.rs  config.rs  deploy.rs  doctor.rs  gateway.rs  infer.rs  info.rs  interactive.rs  logs.rs  memory.rs  message.rs  mod.rs  model.rs  payment.rs  propose.rs  security.rs  session.rs  setup.rs  skill.rs  vote.rs  watch.rs
apps/cli/tests/: integration_tests.rs
crates/brain/: CONTRIBUTING.md  Cargo.toml  README.md
crates/brain/benches/: cognition_bench.rs  emotion_bench.rs  memory_bench.rs  memory_query_bench.rs  neat_bench.rs  neat_evolution_bench.rs  pad_bench.rs  reasoning_bench.rs
crates/brain/examples/: evolve_agent.rs
crates/brain/src/: api.rs  error.rs  lib.rs  metrics.rs  optimization.rs  readme.md  social-brain-architecture-logic.md  social-brain-debugging-testing-guide.md  test_utils.rs  todo-list1.md  todo-list2.md  todo-list3.md  utils.rs
crates/brain/src/attention/: focus.rs  mechanism.rs  mod.rs  saliency.rs  spotlight.rs
crates/brain/src/cognition/: abstraction.rs  chain.rs  decision.rs  mod.rs  perception.rs  planning.rs  process.rs  tests.rs  thought.rs
crates/brain/src/config/: hot_reload.rs  loader.rs  mod.rs  validator.rs
crates/brain/src/creativity/: divergence.rs  ideation.rs  mod.rs  synthesis.rs
crates/brain/src/distributed/: backend.rs  mod.rs
crates/brain/src/emotion/: computing.rs  contagion.rs  dynamics.rs  memory.rs  mod.rs  state.rs  transitions.rs
crates/brain/src/evolution/: crossover.rs  engine.rs  fitness.rs  mod.rs  mutation.rs  selection.rs
crates/brain/src/gpu/: mod.rs
crates/brain/src/knowledge/: concept_net.rs  fusion.rs  graph.rs  inference.rs  mod.rs  ontology.rs
crates/brain/src/language/: mod.rs  nlp.rs  sentiment.rs  translation.rs
crates/brain/src/learning/: curriculum.rs  meta_learning.rs  mod.rs  reinforcement.rs  replay.rs
crates/brain/src/memory/: consolidation.rs  embeddings.rs  episodic.rs  index.rs  mod.rs  procedural.rs  query_result.rs  semantic.rs  short_term.rs
crates/brain/src/metacognition/: mod.rs  reflection.rs
crates/brain/src/neat/: config.rs  genome.rs  mod.rs  network.rs  species.rs
crates/brain/src/pad/: emotion.rs  mod.rs  tests.rs  transition.rs
crates/brain/src/personality/: dynamics.rs  engine.rs  genetics.rs  mod.rs  ocean.rs  traits.rs
crates/brain/src/reasoning/: abductive.rs  analogical.rs  causal.rs  (+4 more)
crates/brain/tests/: boundary_tests.rs  cognition_integration_tests.rs  integration_tests.rs  memory_test.rs  neat_test.rs  pad_test.rs
crates/chain/: API.md  Cargo.toml
crates/chain/benches/: chain_benchmarks.rs
crates/chain/deployments/: config.toml
crates/chain/docs/: book.toml
crates/chain/examples/: query_dao.rs
crates/chain/src/: constants.rs  error.rs  events.rs  lib.rs  message_bus.rs  readme.md  types.rs
crates/chain/tests/: chain_integration_test.rs  dao_client_integration.rs  dao_test.rs  error_handling_test.rs  identity_registry_integration.rs  p0_fixes_verification_test.rs  retry_circuit_breaker_test.rs  websocket_events_test.rs
crates/core/: Cargo.toml
crates/core/benches/: types_bench.rs
crates/core/src/: config.rs  error.rs  event.rs  event_bus.rs  lib.rs  macros.rs  message_bus.rs  traits.rs  types.rs  utils.rs
crates/crypto/: Cargo.toml
crates/crypto/examples/: sign_message.rs
crates/crypto/src/: error.rs  hash.rs  keys.rs  lib.rs  merkle.rs  signature.rs  types.rs  vrf.rs  zk.rs
crates/crypto/tests/: crypto_test.rs
crates/gateway-lib/: Cargo.toml
crates/gateway-lib/src/: SECURITY_FIXES_SUMMARY.md  agent_runtime.rs  beebotos-gateway-lib-testing-guide.md  channel_binding_store.rs  config.rs  error.rs  error_adapter.rs  gateway_modules_analysis.md  health.rs  lib.rs  repository.rs  state_store.rs  todo-list1.md  todo-list2.md
crates/kernel/: Cargo.toml
crates/kernel/benches/: ipc_bench.rs  memory_bench.rs  scheduler_bench.rs  wasm_bench.rs
crates/kernel/examples/: kernel_demo.rs  simple_scheduler.rs  syscall_demo.rs
crates/kernel/src/: PRODUCTION_IMPROVEMENTS.md  beebotos-kernel-analysis.md  beebotos-kernel-debugging-testing-guide.md  beebotos-kernel-detailed-analysis.md  boot.rs  error.rs  events.rs  lib.rs  main.rs  message_bus.rs  readme.md  task_monitor.rs  todo-list.md  todo-list2.md  todo-list3.md  todo-list4.md
crates/kernel/tests/: capability_test.rs  debug1.md  ipc_tests.rs  memory_integration_tests.rs  scheduler_test.rs  security_tests.rs  stress_tests.rs  syscall_blockchain_tests.rs  wasm_runtime_tests.rs
crates/message-bus/: Cargo.toml  README.md
crates/message-bus/examples/: basic_pub_sub.rs  config_example.rs  distributed_cluster.rs  request_reply.rs
crates/message-bus/proto/: message_bus.proto
crates/message-bus/src/: codec.rs  config.rs  error.rs  lib.rs  message.rs  metrics.rs  persistence.rs  router.rs  tracing.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: client.rs  context.rs  error.rs  http.rs  lib.rs  message.rs  readme.md  storage.rs  types.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs  logging.rs  tracing.rs
(+1073 files in other folders)
