[package]
name = "beebotos-beehub"
version = "1.0.0"
edition = "2021"
description = "BeeHub - Skill marketplace for BeeBotOS"
license = "MIT"

[[bin]]
name = "beehub"
path = "src/main.rs"

[dependencies]
beebotos-core = { path = "../../crates/core" }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], default-features = false }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "limit"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
