[package]
name = "beebotos-cli"
version = "1.0.0"
edition = "2021"
authors = ["BeeBotOS Team"]
description = "BeeBotOS Command Line Interface"
license = "MIT"
repository = "https://github.com/beebotos/beebotos"
default-run = "beebot"

[[bin]]
name = "beebot"
path = "src/main.rs"

[dependencies]
# Internal crates - uncomment as needed
# beebotos-core = { path = "../../crates/core" }
# beebotos-kernel = { path = "../../crates/kernel" }
# beebotos-agents = { path = "../../crates/agents" }
# beebotos-chain = { path = "../../crates/chain" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Terminal UI
indicatif = "0.17"
colored = "2.1"
dialoguer = "0.11"
console = "0.15"

# Interactive shell
rustyline = "14.0"

# System utilities
dirs = "5.0"
url = "2.5"
keyring = { version = "2.3", optional = true }

# Logging and tracing
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
walkdir = "2.5"
tempfile = "3.10"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random generation
rand = "0.8"

# Password prompt
rpassword = "7.3"

# CSV processing
csv = "1.3"

# Base64 encoding
base64 = "0.22"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
whoami = "1.5"
hex = "0.4"

# Browser/URL handling
open = "5.0"

# MIME type handling
mime = "0.3"
mime_guess = "2.0"

[features]
default = ["keyring"]
keyring = ["dep:keyring"]

[dev-dependencies]
assert_cmd = "=2.0.14"
predicates = "3.1"
tempfile = "3.10"
mockito = "1.4"
