[package]
name = "beebotos-brain"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "BeeBotOS Brain - NEAT evolution, PAD emotions, OCEAN personality, and memory systems"
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
beebotos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
petgraph = "0.6"
rayon = "1.8"
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = "1.19"
toml = "0.8"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pad_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "cognition_bench"
harness = false

[[bench]]
name = "neat_bench"
harness = false

[[bench]]
name = "emotion_bench"
harness = false
