[package]
name = "beebotos-core"
version = "1.0.0"
edition = "2021"
authors = ["BeeBotOS Team"]
description = "BeeBotOS Core - Shared types and utilities"
license = "MIT"
repository = "https://github.com/beebotos/beebotos"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
bytes = "1.5"
tokio = { version = "1.36", features = ["sync"] }
tracing = "0.1"
toml = "0.8"

# 🟡 P1 FIX: Alloy primitives for unified types
alloy-primitives = { version = "0.8", features = ["serde"] }

# 🟢 P1 FIX: Message Bus integration
beebotos-message-bus = { path = "../message-bus", features = ["memory"] }

[dev-dependencies]
serde_test = "1.0"
criterion = "0.5"
