[package]
name = "beebotos-crypto"
version = "1.0.0"
edition = "2021"
authors = ["BeeBotOS Team"]
description = "BeeBotOS Crypto - Cryptographic primitives"
license = "MIT"
repository = "https://github.com/beebotos/beebotos"

[dependencies]
beebotos-core = { path = "../core" }

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"
hex = "0.4"
ed25519-dalek = { version = "2.1", optional = true }
blake3 = "1.5"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["ed25519"]
ed25519 = ["ed25519-dalek"]
