[package]
name = "beebotos-gateway-lib"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "BeeBotOS Gateway shared library"
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
beebotos-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "json", "uuid"] }

# Additional production dependencies
dashmap = "6.0"
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
futures = { workspace = true }
serde_yaml = { workspace = true }
secrecy = { version = "0.8", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
once_cell = "1.19"
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }

[lib]
name = "beebotos_gateway_lib"
path = "src/lib.rs"
