[package]
name = "beebotos-kernel"
version = "1.0.0"
edition = "2021"
authors = ["BeeBotOS Team"]
description = "BeeBotOS Kernel - Core OS functionality"
license = "MIT"
repository = "https://github.com/beebotos/beebotos"

[dependencies]
beebotos-core = { path = "../core" }
beebotos-message-bus = { path = "../message-bus", features = ["memory"] }
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
num_cpus = "1.16"
sysinfo = "0.30"
rand = "0.8"
hex = "0.4"
crossbeam = "0.8"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }
ulid = "1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory management
tikv-jemallocator = { version = "0.5", optional = true }

# WASM runtime
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# Additional utilities
parking_lot = "0.12"
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }
sha2 = "0.10"
dirs = "5.0"
rayon = "1.8"
wat = { version = "1.200", optional = true }

# Storage backends
rocksdb = { version = "0.22", optional = true }
redb = { version = "2.4", optional = true }
rusqlite = { version = "0.32", optional = true }
# Note: Using serde_json instead of bincode to avoid byteorder version conflicts
# bincode = "1.3"

# Encryption support (optional)
aes-gcm = { version = "0.10", optional = true }

# Secure memory zeroization
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tempfile = "3.10"

[features]
# Note: jemalloc is disabled by default on Windows as it requires Unix tools (sh)
default = ["std", "wasm"]
std = []
no_std = []
tee = []
# Enable jemalloc memory allocator (Unix only)
jemalloc = ["dep:tikv-jemallocator"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wat"]
# Storage backends
rocksdb = ["dep:rocksdb"]
redb = ["dep:redb"]
sqlite = ["dep:rusqlite"]
encryption = ["dep:aes-gcm"]
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
