[package]
name = "beebotos-telemetry"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Telemetry, tracing, logging, and metrics for BeeBotOS"
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { version = "0.20", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.22", optional = true }
prometheus = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = "6.0"

[features]
default = ["tracing", "metrics"]
tracing = []
metrics = ["prometheus"]
jaeger = ["opentelemetry-jaeger", "opentelemetry_sdk", "tracing-opentelemetry"]
otlp = ["opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[dev-dependencies]
tokio-test = { workspace = true }
